[gd_scene load_steps=10 format=3 uid="uid://ckumraqxnpcit"]

[ext_resource type="Script" uid="uid://cepgaqh5xpfae" path="res://levels/level_mechanics/new_camera_system.gd" id="1_okrg6"]
[ext_resource type="Texture2D" uid="uid://c8gyc1jvunhhb" path="res://assets/sprites/tilesets/debug_tileset_basic2.png" id="1_spx2w"]
[ext_resource type="Script" uid="uid://cdemdqe1mxe50" path="res://levels/test stages/test_boss_room_2.gd" id="1_vmhpl"]
[ext_resource type="PackedScene" uid="uid://ctdf8l75pwgyp" path="res://players/megaman.tscn" id="2_cvcx2"]
[ext_resource type="PackedScene" uid="uid://4w0eroyrq7m5" path="res://enemy/boss/fireman_boss.tscn" id="3_hymnq"]
[ext_resource type="PackedScene" uid="uid://b7acyh6elurni" path="res://levels/level_mechanics/savepoint.tscn" id="6_geuuw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lhfi"]
size = Vector2(256, 224)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m8qqy"]
texture = ExtResource("1_spx2w")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ihvjg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_m8qqy")

[node name="test_boss_room_2" type="Node2D"]
script = ExtResource("1_vmhpl")

[node name="Camera_System" type="Area2D" parent="." node_paths=PackedStringArray("zone_camera_2d", "collision_limits_camera", "GlobalTimerChecker")]
visible = false
script = ExtResource("1_okrg6")
zone_camera_2d = NodePath("Camera2D")
collision_limits_camera = NodePath("CollisionShape2D")
GlobalTimerChecker = NodePath("")
timer_addon_exists = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_System"]
position = Vector2(128, 112)
shape = SubResource("RectangleShape2D_4lhfi")
debug_color = Color(0.4, 0.2, 0.6, 0.5)

[node name="Camera2D" type="Camera2D" parent="Camera_System"]
limit_left = 0
limit_top = 0
limit_right = 256
limit_bottom = 224

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ihvjg")
format = 2
layer_0/name = "level"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 13, 0, 0, 14, 0, 0, 12, 0, 0, 11, 0, 0, 10, 0, 0, 9, 0, 0, 8, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 851982, 0, 0, 851981, 0, 0, 851980, 0, 0, 851979, 0, 0, 851978, 0, 0, 851977, 0, 0, 851976, 0, 0, 851975, 0, 0, 851974, 0, 0, 851973, 0, 0, 851972, 0, 0, 851971, 0, 0, 851970, 0, 0, 851969, 0, 0, 851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 655360, 0, 0, 589824, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0)
layer_1/name = "bg"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(0, 196608, 0, 65536, 196608, 0, 131072, 196608, 0, 196608, 196608, 0, 262144, 196608, 0, 327680, 196608, 0, 393216, 196608, 0, 458752, 196608, 0, 524288, 196608, 0, 589824, 196608, 0, 655360, 196608, 0, 720896, 196608, 0, 786432, 196608, 0, 851968, 196608, 0, 1, 196608, 0, 65537, 196608, 0, 131073, 196608, 0, 196609, 196608, 0, 262145, 196608, 0, 327681, 196608, 0, 393217, 196608, 0, 458753, 196608, 0, 524289, 196608, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 196608, 0, 786433, 196608, 0, 851969, 196608, 0, 2, 196608, 0, 65538, 196608, 0, 131074, 196608, 0, 196610, 196608, 0, 262146, 196608, 0, 327682, 196608, 0, 393218, 196608, 0, 458754, 196608, 0, 524290, 196608, 0, 589826, 196608, 0, 655362, 196608, 0, 720898, 196608, 0, 786434, 196608, 0, 851970, 196608, 0, 3, 196608, 0, 65539, 196608, 0, 131075, 196608, 0, 196611, 196608, 0, 262147, 196608, 0, 327683, 196608, 0, 393219, 196608, 0, 458755, 196608, 0, 524291, 196608, 0, 589827, 196608, 0, 655363, 196608, 0, 720899, 196608, 0, 786435, 196608, 0, 851971, 196608, 0, 4, 196608, 0, 65540, 196608, 0, 131076, 196608, 0, 196612, 196608, 0, 262148, 196608, 0, 327684, 196608, 0, 393220, 196608, 0, 458756, 196608, 0, 524292, 196608, 0, 589828, 196608, 0, 655364, 196608, 0, 720900, 196608, 0, 786436, 196608, 0, 851972, 196608, 0, 5, 196608, 0, 65541, 196608, 0, 131077, 196608, 0, 196613, 196608, 0, 262149, 196608, 0, 327685, 196608, 0, 393221, 196608, 0, 458757, 196608, 0, 524293, 196608, 0, 589829, 196608, 0, 655365, 196608, 0, 720901, 196608, 0, 786437, 196608, 0, 851973, 196608, 0, 6, 196608, 0, 65542, 196608, 0, 131078, 196608, 0, 196614, 196608, 0, 262150, 196608, 0, 327686, 196608, 0, 393222, 196608, 0, 458758, 196608, 0, 524294, 196608, 0, 589830, 196608, 0, 655366, 196608, 0, 720902, 196608, 0, 786438, 196608, 0, 851974, 196608, 0, 7, 196608, 0, 65543, 196608, 0, 131079, 196608, 0, 196615, 196608, 0, 262151, 196608, 0, 327687, 196608, 0, 393223, 196608, 0, 458759, 196608, 0, 524295, 196608, 0, 589831, 196608, 0, 655367, 196608, 0, 720903, 196608, 0, 786439, 196608, 0, 851975, 196608, 0, 8, 196608, 0, 65544, 196608, 0, 131080, 196608, 0, 196616, 196608, 0, 262152, 196608, 0, 327688, 196608, 0, 393224, 196608, 0, 458760, 196608, 0, 524296, 196608, 0, 589832, 196608, 0, 655368, 196608, 0, 720904, 196608, 0, 786440, 196608, 0, 851976, 196608, 0, 9, 196608, 0, 65545, 196608, 0, 131081, 196608, 0, 196617, 196608, 0, 262153, 196608, 0, 327689, 196608, 0, 393225, 196608, 0, 458761, 196608, 0, 524297, 196608, 0, 589833, 196608, 0, 655369, 196608, 0, 720905, 196608, 0, 786441, 196608, 0, 851977, 196608, 0, 10, 196608, 0, 65546, 196608, 0, 131082, 196608, 0, 196618, 196608, 0, 262154, 196608, 0, 327690, 196608, 0, 393226, 196608, 0, 458762, 196608, 0, 524298, 196608, 0, 589834, 196608, 0, 655370, 196608, 0, 720906, 196608, 0, 786442, 196608, 0, 851978, 196608, 0, 11, 196608, 0, 65547, 196608, 0, 131083, 196608, 0, 196619, 196608, 0, 262155, 196608, 0, 327691, 196608, 0, 393227, 196608, 0, 458763, 196608, 0, 524299, 196608, 0, 589835, 196608, 0, 655371, 196608, 0, 720907, 196608, 0, 786443, 196608, 0, 851979, 196608, 0, 12, 196608, 0, 65548, 196608, 0, 131084, 196608, 0, 196620, 196608, 0, 262156, 196608, 0, 327692, 196608, 0, 393228, 196608, 0, 458764, 196608, 0, 524300, 196608, 0, 589836, 196608, 0, 655372, 196608, 0, 720908, 196608, 0, 786444, 196608, 0, 851980, 196608, 0, 13, 196608, 0, 65549, 196608, 0, 131085, 196608, 0, 196621, 196608, 0, 262157, 196608, 0, 327693, 196608, 0, 393229, 196608, 0, 458765, 196608, 0, 524301, 196608, 0, 589837, 196608, 0, 655373, 196608, 0, 720909, 196608, 0, 786445, 196608, 0, 851981, 196608, 0, 14, 196608, 0, 65550, 196608, 0, 131086, 196608, 0, 196622, 196608, 0, 262158, 196608, 0, 327694, 196608, 0, 393230, 196608, 0, 458766, 196608, 0, 524302, 196608, 0, 589838, 196608, 0, 655374, 196608, 0, 720910, 196608, 0, 786446, 196608, 0, 851982, 196608, 0, 15, 196608, 0, 65551, 196608, 0, 131087, 196608, 0, 196623, 196608, 0, 262159, 196608, 0, 327695, 196608, 0, 393231, 196608, 0, 458767, 196608, 0, 524303, 196608, 0, 589839, 196608, 0, 655375, 196608, 0, 720911, 196608, 0, 786447, 196608, 0, 851983, 196608, 0)

[node name="fireman_boss" parent="." instance=ExtResource("3_hymnq")]
position = Vector2(214, 177)

[node name="megaman" parent="." instance=ExtResource("2_cvcx2")]
position = Vector2(47, 175)

[node name="savepoint" parent="." instance=ExtResource("6_geuuw")]
visible = false
position = Vector2(46, 193)

[node name="start_boss_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="boss_theme_test" type="AudioStreamPlayer" parent="." groups=["bgm"]]
process_mode = 3
volume_db = -10.0

[connection signal="timeout" from="start_boss_timer" to="." method="_on_start_boss_timer_timeout"]
[connection signal="finished" from="boss_theme_test" to="." method="_on_boss_theme_test_finished"]
